--- a/Programming_124_Short_Video_Notes.csproj
+++ b/Programming_124_Short_Video_Notes.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Examples\Exceptions\" />
+  </ItemGroup>
+
 </Project>
